removed payment transaction type option

--- a/upload/admin/view/template/extension/sale/sc_order_info.twig
+++ b/upload/admin/view/template/extension/sale/sc_order_info.twig
@@ -153,7 +153,7 @@
                                 <button class="btn btn-danger btn-xs sc_order_btns" onclick="scOrderActions('{{ sc_order_confirm_cancel }}', 'void', {{ order_id }})">{{ sc_btn_void }}</button>
                             {% endif %}
 
-                            {% if order_status_id == 1 and order_resp_tr_type == 'Auth' and sc_gw_tr_type == 'Auth' %}
+                            {% if order_status_id == 1 and order_resp_tr_type == 'Auth' %}
                                 <button class="btn btn-success btn-xs sc_order_btns" onclick="scOrderActions('{{ sc_order_confirm_settle }}', 'settle', {{ order_id }})">{{ sc_btn_settle }}</button>
                             {% endif %}
                         </div>
